--- a/views/input_form.html
+++ b/views/input_form.html
@@ -7,24 +7,86 @@
     <title>Input Form For FPDF</title>
     <link rel="stylesheet" href="assets/css/main.css">
 <body>
-    <div>
-        <hr/>
-            FPDF
-        <hr/>
-        <br/>
+  <!-- NOTE: Split Entry and Entries To different Pages -->
+    <div class="flex-container">
 
-        <form action="?page=createPDF" method="post">
-            Input 1 <input name="input1" type="text" />
-            <br/><br/>
-            Input 2 <input name="input2" type="text" />
-            <br/><br/>
-            <button type="submit">Generate PDF</button>
-        </form>
+        <div>
+            <hr/>
+                FPDF
+            <hr/>
+            <br/>
+    
+            <form onsubmit="save(); return false;" method="post">
 
-        <br/>
-        <hr/>
-        <br/>
+                Buyers Name <input name="input1" type="text" />
 
+                <br/>
+                <br/>
+
+                <label for="pet-select">Choose a Weed:</label>
+
+                <select name="pets" id="pet-select">
+                    <option value="">--Please choose an option--</option>
+                    <option value="1">Cannabis Sativa</option>
+                    <option value="2">Marijuana</option>
+                    <option value="3">Cannabil Ruderalis</option>
+                    <option value="4">White Widow</option>
+                    <option value="5">Quebec Gold</option>
+                    <option value="6">NYC Diesel</option>
+                    <option value="7">Shaman</option>
+                    <option value="8">Nederwiet</option>
+                </select>
+
+                <br/>
+                <br/>
+
+                Cost Per Weed <input name="input2" type="text" />
+                
+                <br/>
+                <br/>
+
+                Total Amount <span id="totalAmount">##</span>
+
+                <br/>
+                <br/>
+
+                <button type="submit">Save To Database</button>
+            </form>
+        </div>
+
+        <div>
+            <hr/>
+                Entries
+            <hr/>
+            <br/>
+    
+            <table>
+                <thead>
+                  <tr>
+                    <th>Person</th>
+                    <th>Amount</th>
+                    <th>Date</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Person1</td>
+                    <td>$5.99</td>
+                    <td>02/03/09</td>
+                  </tr>
+                  <tr>
+                    <td>Person2</td>
+                    <td>$12.99</td>
+                    <td>08/15/09</td>
+                  </tr>
+                </tbody>
+              </table>
+              
+        </div>
+
+    </div>
+
+    <div class="links">
         <a href="http://www.fpdf.org/">FPDF</a><br/>
         <a href="http://www.fpdf.org/en/doc/index.php">Manual</a><br/>
         <a href="http://www.fpdf.org/en/tutorial/tuto1.htm">Minimal Example</a>
