Fetch Api on save

--- a/views/entry.html
+++ b/views/entry.html
@@ -24,7 +24,7 @@
 						<option value="">--Please choose an option--</option>
 						<option value="1">Cannabis Sativa</option>
 						<option value="2">Marijuana</option>
-						<option value="3">Cannabil Ruderalis</option>
+						<option value="3">Cannabis Ruderalis</option>
 						<option value="4">White Widow</option>
 						<option value="5">Quebec Gold</option>
 						<option value="6">NYC Diesel</option>
