Head Closing Tag Added

--- a/views/templates/head.html
+++ b/views/templates/head.html
@@ -6,4 +6,5 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Input Form For FPDF</title>
     <link rel="stylesheet" href="assets/css/main.css">
+</head>
 <body>
