--- a/views/entry.html
+++ b/views/entry.html
@@ -17,7 +17,7 @@
 				</div>
 
 				<div class="col-6">
-					Choose a Weed:
+					Choose a Product
 				</div>
 				<div class="col-6">
 					<select id="productList">
@@ -56,4 +56,4 @@
 	</div>
 </div>
 <script src="assets/js/getProducts.js"></script>
-<script src="assets/js/save.js"></script>
+<script src="assets/js/entry.js"></script>
