Moving On From <option>

--- a/views/entry.html
+++ b/views/entry.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="col-6">
 					<select id="productList">
-						<!-- NIJAVASCRIPT -->
+						<option value="">Select Product</option>
 					</select>
 				</div>
 
@@ -55,4 +55,5 @@
 	</div>
 </div>
 <script src="assets/js/getProducts.js"></script>
+<script src="assets/js/sendEntry.js"></script>
 <script src="assets/js/entry.js"></script>
